make wars messages customizable